# py-pkgs-testing

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: conf.py
tests/: test_pycounts.py
