# Package Metadata
[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "Testing Packaging"
authors = ["Jesse Schoen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

# For Running tests, building documentation
matplotlib = "^3.6.0"
[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
