# Package Metadata
[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "Testing Packaging"
authors = ["Jesse Schoen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.6.0"

[tool.poetry.dev-dependencies] # For Running tests, building documentation
pytest = "^7.1.3"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
